<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.staartvin</groupId>
    <artifactId>PluginLibrary</artifactId>
    <version>1.2.4</version>


    <build>

        <sourceDirectory>src</sourceDirectory>

        <resources>

            <resource>
                <filtering>true</filtering>
                <directory>${basedir}</directory>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
            <resource>
                <filtering>true</filtering>
                <directory>src</directory>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>


        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                    <excludes>
                        <exclude>${basedir}/Javadocs</exclude>
                        <exclude>${basedir}/lib</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Stop Maven from including the dependencies (.jars) in the artifact
                (created by Jenkins) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <excludes>
                        <exclude>*.jar</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <properties> <!-- Fix encoding warnings -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>staartvin-repo</id>
            <url>http://78.47.218.125:8081/artifactory/libs-release-local/</url>
        </repository>


        <repository>
            <id>Spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>

        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

    </repositories>

    <dependencies>

        <dependency>
            <groupId>me.staartvin.Statz</groupId>
            <artifactId>Statz</artifactId>
            <version>1.5.3</version>
        </dependency>

        <dependency>
            <groupId>com.savagefactions</groupId>
            <artifactId>SavageFactions</artifactId>
            <version>2.5</version>
        </dependency>

        <dependency>
            <groupId>com.massivecraft.massivecore</groupId>
            <artifactId>MassiveCore</artifactId>
            <version>2.14.0</version>
        </dependency>

        <dependency>
            <groupId>com.massivecraft.factions</groupId>
            <artifactId>Factions</artifactId>
            <version>2.14.0</version>
        </dependency>

        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
        </dependency>

        <dependency>
            <groupId>Jobs</groupId>
            <artifactId>jobs</artifactId>
            <version>4.14.3</version>
        </dependency>

        <dependency>
            <groupId>afkTerminator</groupId>
            <artifactId>afkTerminator</artifactId>
            <version>3.0.8</version>
        </dependency>

        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.1.111</version>
        </dependency>

        <dependency>
            <groupId>com.wasteofplastic</groupId>
            <artifactId>acidisland</artifactId>
            <version>3.0.9.4</version>
        </dependency>

        <dependency>
            <groupId>com.wasteofplastic</groupId>
            <artifactId>askyblock</artifactId>
            <version>3.0.9.4</version>
        </dependency>

        <dependency>
            <groupId>BattleLevels</groupId>
            <artifactId>BattleLevels</artifactId>
            <version>8.2.2</version>
        </dependency>

        <dependency>
            <groupId>net.ess3</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>nl.lolmewn.stats</groupId>
            <artifactId>Stats</artifactId>
            <version>5.3.3</version>
        </dependency>

        <dependency>
            <groupId>RPGme</groupId>
            <artifactId>RPGme</artifactId>
            <version>1.0.2</version>
        </dependency>

        <dependency>
            <groupId>RoyalCommands</groupId>
            <artifactId>RoyalCommands</artifactId>
            <version>4.1.1</version>
        </dependency>

        <dependency>
            <groupId>me.staartvin.autorank</groupId>
            <artifactId>Autorank</artifactId>
            <version>4.2.6</version>
        </dependency>

        <dependency>
            <groupId>me.ryanhamshire</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>16.12.0</version>
        </dependency>

        <dependency>
            <groupId>OnTime</groupId>
            <artifactId>OnTime</artifactId>
            <version>4.1.4</version>
        </dependency>

        <dependency>
            <groupId>com.hm.achievement</groupId>
            <artifactId>advanced-achievements-plugin</artifactId>
            <version>5.13.1</version>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.0.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.rlf</groupId>
            <artifactId>uSkyBlock-API</artifactId>
            <version>2.8.5</version>
        </dependency>

        <dependency>
            <groupId>me.blackvein.quests</groupId>
            <artifactId>quests-main</artifactId>
            <version>3.8.1</version>
        </dependency>

        <dependency>
            <groupId>com.leonardobishop</groupId>
            <artifactId>quests</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>org.black_ixx</groupId>
            <artifactId>PlayerPoints</artifactId>
            <version>2.1.5</version>
        </dependency>

        <dependency>
            <groupId>com.vexsoftware</groupId>
            <artifactId>nuvotifier</artifactId>
            <version>2.5.3</version>
        </dependency>

        <dependency>
            <groupId>com.Zrips.CMI</groupId>
            <artifactId>CMI</artifactId>
            <version>7.1.3.0</version>
        </dependency>

        <dependency>
            <groupId>com.gmail.mezymc</groupId>
            <artifactId>UhcStats</artifactId>
            <version>1.4</version>
        </dependency>


        <!-- Test dependencies -->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>4.13.1</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>java-hamcrest</artifactId>
            <scope>test</scope>
            <version>2.0.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
            <version>2.7.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>hamcrest-core</artifactId>
                    <groupId>org.hamcrest</groupId>
                </exclusion>
            </exclusions>
        </dependency>

    </dependencies>


</project>